fixtures/name-resolution/positive/cpp_namespace_merge.cos
import std as cstd from "c++/vector"
import std as cstd from "c++/string"

type StdVector = cstd::vector
