fixtures/name-resolution/negative/cpp_alias_conflicts_with_cosmo_binding.cos
/// diag(error, 3:1): cosmo1.name.duplicate-definition
val cstd: i32 = 1
import std as cstd from "c++/vector"
